--- a/views/index.ejs
+++ b/views/index.ejs
@@ -68,10 +68,8 @@
 
 				<div class="project-item">
 					<a target="_blank" href="<%= projectItem.link %>" class="project-item__link">
-						<img class="project-item__image b-lazy" 
-								src="" 
-								data-src="<%= projectsImageRoot %>/<%= projectItem.imageName %>" 
-								data-src-small="<%= projectsImageRoot %>/<%= projectItem.imageName %>"
+						<img class="project-item__image" 
+								src="<%= projectsImageRoot %>/<%= projectItem.imageName %>" 
 								alt="">
 						<div class="project-item__overlay">
 							<div class="project-item__title"><%= projectItem.name %></div>
