--- a/sass/main.scss
+++ b/sass/main.scss
@@ -33,7 +33,8 @@ body {
 	background: url(../img/bg1.jpg) 50% 0 no-repeat;
 	background-size: cover;
 	position: relative;
-	padding: 100px 0 300px;
+	// padding: 100px 0 300px;
+	padding: 200px 0;
 	color: #fff;
 
 	&:before {
@@ -85,6 +86,8 @@ body {
 	border: 10px solid #eff0f4;
 	border-radius: 50%;
 	overflow: hidden;
+	//
+	display: none;
 
 	@media only screen and (max-width: 540px) {
 		width: 80%;
@@ -101,7 +104,7 @@ body {
 	background: $bg-def;
 	
 	.container {
-		padding-top: 0;
+		// padding-top: 0;
 	}
 }
 
@@ -226,9 +229,9 @@ body {
 .project-item__big-name {
 	margin: 0;
 	text-transform: uppercase;
-	font-size: 20px;
+	font-size: 30px;
 	margin-bottom: 10px;
-	letter-spacing: .05em;
+	
 }
 
 /*
@@ -297,4 +300,8 @@ body {
 	padding: 0 10px;
 	background: $color-primary;
 	display: inline-block;
+}
+
+.no-tt {
+	text-transform: none;
 }
