--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Vitalii Dus</title>
 	<meta name="viewport" content="width=device-width">
-	<link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700,900&subset=latin,	cyrillic-ext' rel='stylesheet' type='text/css'>
+	<link href='//fonts.googleapis.com/css?family=Roboto:400,300,700,900&subset=latin,	cyrillic-ext' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
