--- a/projects/green/css/main.css
+++ b/projects/green/css/main.css
@@ -525,7 +525,7 @@ body {
     display: inline-block;
     vertical-align: top;
     width: 31%;
-    margin: 0 0 21px 2%;
+    margin: 0 0 21px 13px;
 }
 
 .mp-order__brand {
