--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
 
 			<p>Я имею опыт серверного программирования(<b>PHP</b>), а также проектирования и работы с бд.</p>
 
-			<p>У меня есть <b>степень бакалавра</b> по компьютерным наукам и <b>диплом специалиста</b> по программированию, которые я получил по окончанию Сибирского Федереальноо Университета. Пройдя курсы при МГТУ им. Баумана, получил сертификат "Профессиональная разработка на PHP5".</p>
+			<p>У меня есть <b>степень бакалавра</b> по компьютерным наукам и <b>диплом специалиста</b> по программированию, которые я получил по окончанию Сибирского Федереального Университета. Пройдя курсы при МГТУ им. Баумана, получил сертификат "Профессиональная разработка на PHP5".</p>
 
 			<p>Естественно, я обладаю обширным опытом в созданиии веб проектов различной сложности и масштаба. Отлично себя чувствую в команде разработчиков. Могу работать удаленно, соблюдая сроки и обеспечивая постоянный фидбэк в рабочее время.</p>
 		</div>
