--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,7 +42,7 @@
 	<section class="skills">
 		<div class="container">
 			<h3>Технологии и инструменты</h3>
-			<p>Я слежу за тенденциями web, поэтому стараюсь использовать передовые технологии и инструменты разработки, такие как <b>gulp</b>, <b>sass</b>, <b>autoprefixer</b>, <b>sprite geneartion</b>, <b>svg</b>, <b>font-icons</b>, <b>twitter-bootstrap</b> и т.д. Конечно же активно использую <b>javascript</b> и <b>jquery</b>. Активно осваиваю <b>angularjs</b> и слежу за развитием других js-фрейморков. Помимо это в работал с проектами использующих такие вещи как  <b>Yii</b>, <b>Symphony</b>, <b>jsp</b>, <b>Primefaces</b>, <b>gradle</b>.</p>
+			<p>Я слежу за тенденциями web, поэтому стараюсь использовать передовые технологии и инструменты разработки, такие как <b>gulp</b>, <b>sass</b>, <b>autoprefixer</b>, <b>sprite geneartion</b>, <b>svg</b>, <b>font-icons</b>, <b>twitter-bootstrap</b> и т.д. Конечно же активно использую <b>javascript</b> и <b>jquery</b>. Активно осваиваю <b>angularjs</b> и слежу за развитием других js-фрейморков. Помимо этого я работал с проектами использующими такие вещи как  <b>Yii</b>, <b>Symphony</b>, <b>jsp</b>, <b>Primefaces</b>, <b>gradle</b>.</p>
 			
 			<ul class="skills-list">
 				<li class="skills-list__skill"><img src="/img/tech/html.png" alt=""></li>
